--- a/main-page.css
+++ b/main-page.css
@@ -2,14 +2,15 @@ body {
 	margin: 0;
 }
 
-#sesi-1 {
+/*section-1 start*/
+
+#section-1 {
 	width: 100%;
 	height: 100vh;
 	background-image: url(image/main-bg.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	position: relative;
-	margin-bottom: 0px;
 }
 
 .bar {
@@ -32,19 +33,15 @@ body {
 
 .bar .menu {
 	color: white;
-	display: flex;
-	
+	display: flex;	
 }
 
 .bar .menu a {
 	text-decoration: none;
 	font-family: Open Sans, sans-serif;
-	font-style: normal;
 	font-size: 12px;
 	color: white;
-	font-style: normal;
 	font-weight: bold;
-	text-transform: uppercase;
 	margin-left: 40px;
 }
 
@@ -59,7 +56,7 @@ body {
 	margin-left: 10px;
 }
 
-#sesi-1 .banner {
+#section-1 .banner {
 	width: 100%;
 	height: 100vh;
 	position: relative;
@@ -122,14 +119,135 @@ body {
 	transform: translateX(-50%);
 }
 
+/*end of section-1*/
 
 
-#sesi-2 {
+/*section-2 start*/
+
+#section-2 {
 	width: 100%;
 	height: 100vh;
-	background-image: url(image/the-games-bg.jpg);
+	background-image: url(image/the-games-bg-fix.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	position: relative;
-	margin-top: 0;
+	display: flex;
+	align-items: center;
 }
+
+.section-2-wrapper {
+	position: relative;
+	left: 5%;
+	width: 90%;
+}
+
+.section-2-top {
+
+}
+
+.section-2-top p {
+	color: white;
+	font-family:  Arial, Helvetica, Sans;
+	font-size: 24px;
+	font-weight: normal;
+	letter-spacing: 2px;
+	margin: 0;
+}
+
+.section-2-bot {
+	display: flex;
+	justify-content: flex-start;
+}
+
+.section-2-bot .section-2-bot-text p{
+	color: white;
+	font-family:  Arial, Helvetica, Sans;
+	font-size: 56px;
+	letter-spacing: 3px;
+	margin: 0;
+}
+
+.section-2-bot img {
+	width: 700px;
+	height: auto;
+	margin-left: 60px;
+}
+
+/*end of section-2*/
+
+/*section-3 start*/
+
+#section-3 {
+	width: 100%;
+	height: 100vh;
+	background-image: url(image/features-fix.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+
+#section-3 .section-3-wrapper {
+	width: 30%;
+	height: ;
+	position: relative;
+	left: 50%;
+	background-color: black;
+	padding: 50px;
+
+}
+
+#section-3 .section-3-wrapper .title-1 p {
+	color: white;
+	font-family:  Arial, Helvetica, Sans;
+	font-size: 24px;
+	font-weight: normal;
+	letter-spacing: 2px;
+	margin: 0;
+}
+
+#section-3 .section-3-wrapper .title-2 p {
+	color: white;
+	font-family:  Arial, Helvetica, Sans;
+	font-size: 56px;
+	letter-spacing: 3px;
+	margin: 0;
+}
+
+.section-2-content .content {
+	display: flex;
+	position: relative;
+	margin-top: 20px;
+	align-items: center;
+
+}
+
+.section-2-content .circle {
+	width: 10px;
+	height: 10px;
+	border-radius: 20px;
+	background-color: white;
+	margin-right: 10px;
+}
+
+.section-2-content .content .title-content p {
+	color: #FFB548;
+	font-family:  Arial, Helvetica, Sans;
+	font-size: 24px;
+	letter-spacing: 2px;
+	margin: 0;
+}
+
+.section-2-content .text-content {
+	margin-left: 21px;
+	color: white;
+	font-family: Open Sans, sans-serif;
+	font-size: 18px;
+	font-weight: normal;
+}
+
+
+
+
+
