--- a/main-page.css
+++ b/main-page.css
@@ -193,7 +193,7 @@ body {
 	height: ;
 	position: relative;
 	left: 50%;
-	background-color: black;
+	/*background-color: black;*/
 	padding: 50px;
 
 }
@@ -215,10 +215,14 @@ body {
 	margin: 0;
 }
 
+.section-2-content {
+	margin-top: 40px;
+}
+
 .section-2-content .content {
 	display: flex;
 	position: relative;
-	margin-top: 20px;
+	margin-top: 40px;
 	align-items: center;
 
 }
@@ -247,7 +251,71 @@ body {
 	font-weight: normal;
 }
 
+.section-2-content .circle-null {
+	width: 10px;
+	height: 10px;
+	border-radius: 20px;
+	border: 0.5px solid white;
+	margin-right: 10px;
+}
 
+#section-4 {
+	width: 100%;
+	height: 100vh;
+	background-image: url(image/requirements-fix.png);
+	display: flex;
+	align-items: center;
+	position: relative;
 
+}
 
+#section-4 .section-4-wrapper {
+	width: 50%;
+	left: 50px;
+	position: relative;
+	/*background-color:  black;*/
+}
+
+.section-4-wrapper .section-4-title p {
+	color: white;
+	font-family:  Arial, Helvetica, Sans;
+	font-size: 56px;
+	letter-spacing: 3px;
+	margin: 0;
+
+}
+
+.section-4-wrapper .section-4-title {
+	margin-bottom: 50px;
+}
+
+.table table, td {
+	border: 1px solid white;
+	border-spacing: 0;
+}
+
+.table .table-square {
+	width: 50%;
+	padding: 10px 11px;
+}
+
+.table-square .table-title p{
+	color: #FFB548;
+	font-family: Arial, Helvetica, Sans;
+	font-size: 24px;
+	margin-top: 5px;
+	margin-bottom: 10px;
+}
+
+.table-square .table-content p {
+	color: white;
+	font-family: Open Sans, sans-serif;
+	font-size: 18px;
+	margin-bottom: 5px;
+	margin-top: 10px;
+}
+
+.table .table-2 {
+	margin-top: -2px;
+}
 
