--- a/main-page.css
+++ b/main-page.css
@@ -21,6 +21,7 @@ body {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	top: 0;
 }
 
 .bar .logo a {
@@ -95,8 +96,6 @@ body {
 	border-radius: 5px;
 	padding: 12px 50px;
 	font-family: Open Sans, sans-serif;
-
-
 }
 
 .banner .story-text {
@@ -157,6 +156,7 @@ body {
 .section-2-bot {
 	display: flex;
 	justify-content: flex-start;
+	width: 100%;
 }
 
 .section-2-bot .section-2-bot-text p{
@@ -167,10 +167,14 @@ body {
 	margin: 0;
 }
 
+.section-2-bot .img {
+	padding-left: 50px;
+	width: 60%;
+}
+
 .section-2-bot img {
-	width: 700px;
+	width: 100%;
 	height: auto;
-	margin-left: 60px;
 }
 
 /*end of section-2*/
@@ -259,6 +263,12 @@ body {
 	margin-right: 10px;
 }
 
+/*end of section-3*/
+
+
+
+/*section-4 start*/
+
 #section-4 {
 	width: 100%;
 	height: 100vh;
@@ -318,4 +328,125 @@ body {
 .table .table-2 {
 	margin-top: -2px;
 }
+
+/*end of section-4*/
+
+
+
+/*section-5 start*/
+
+#section-5 {
+	width: 100%;
+	height: 100vh;
+	background-image: url(image/top-score-bg.jpg);
+	display: flex;
+	align-items: center;
+	position: relative;
+}
+
+#section-5 .section-5-wrapper {
+	position: relative;
+	width: 100%;
+	display: flex;
+}
+
+.section-5-wrapper .wrapper-left {
+	width: 50%;
+	position: relative;
+	padding-left: 80px;
+
+}
+
+.section-5-wrapper .wrapper-left .top-score p{
+	color: white;
+	font-family: Arial, Helvetica, Sans;
+	font-size: 56px;
+	margin: 20px 0;
+
+}
+
+.section-5-wrapper .wrapper-left .score-info p {
+	color: white;
+	font-family: Open Sans, sans-serif;
+	font-size: 18px;	
+	margin-bottom: 50px;
+}
+
+.section-5-wrapper .wrapper-left .button-more a{
+	padding: 12px 50px;
+	background-color: #FFB548; 
+	text-decoration: none;
+	color: black;
+	border-radius: 5px;
+	font-family: Open Sans, sans-serif;
+	font-weight: bold;
+	font-size: 16px;
+}
+
+.section-5-wrapper .wrapper-right {
+	width: 50%;
+	position: relative;
+	padding-right: 200px;
+	padding-left: 200px;
+}
+
+.wrapper-right .box {
+	background-color: rgba(255, 255, 255, 0.08);
+	width: auto;
+	height: auto;
+	border-radius: 10px;
+	flex-direction: column;
+	padding: 15px;
+}
+
+.box-top .box-top-flex {
+	display: flex;
+	width: auto;
+	align-items: center;
+}
+
+.box-top-flex .circle-photo {
+	height: 50px;
+	width: 50px;
+	border-radius: 50px;
+	background-color: #FFB548;
+	margin-right: 25px;
+}
+
+.box-top-flex .name-box {
+	flex-direction: column;
+}
+
+.box-top-flex .name-box .name {
+	color: #FFB548;
+	font-family: Arial, Helvetica, Sans;
+	font-size: 24px;
+}
+
+.box-top-flex .name-box .profession {
+	color: white;
+	opacity: 0.5;
+	font-family: Open Sans, sans-serif;
+	font-size: 18px;
+
+}
+
+.box-bot .box-bot-flex {
+	flex-direction: column;
+}
+
+.box-bot-flex .review {
+	color: white;
+	font-family: Open Sans, sans-serif;
+	font-size: 18px;
+	margin: 10px 0;
+}
+
+.box-bot-flex .date {
+	color: white;
+	opacity: 0.5;
+	font-family: Open Sans, sans-serif;
+	font-size: 14px;
+}
+
 
