--- a/main-page.css
+++ b/main-page.css
@@ -348,12 +348,14 @@ body {
 	position: relative;
 	width: 100%;
 	display: flex;
+	align-items: center;
 }
 
 .section-5-wrapper .wrapper-left {
 	width: 50%;
 	position: relative;
 	padding-left: 80px;
+
 
 }
 
@@ -386,8 +388,17 @@ body {
 .section-5-wrapper .wrapper-right {
 	width: 50%;
 	position: relative;
-	padding-right: 200px;
-	padding-left: 200px;
+}
+
+#box-1 {
+	margin-left: 100px;
+	margin-right: 150px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+#box-2 {
+	margin-right: 250px;
 }
 
 .wrapper-right .box {
@@ -397,6 +408,11 @@ body {
 	border-radius: 10px;
 	flex-direction: column;
 	padding: 15px;
+	position: relative;
+}
+
+.wrapper-right .box-top {
+	margin-bottom: 20px;
 }
 
 .box-top .box-top-flex {
@@ -405,12 +421,18 @@ body {
 	align-items: center;
 }
 
-.box-top-flex .circle-photo {
-	height: 50px;
-	width: 50px;
+.box-top-flex .circle-photo img{
+	height: auto;
+	width: 60px;
 	border-radius: 50px;
-	background-color: #FFB548;
 	margin-right: 25px;
+	box-shadow: 5px 5px 0 #FFB548;
+}
+
+.box-top .img-twitter {
+	position: absolute;
+	right: 25px;
+	top: 25px;
 }
 
 .box-top-flex .name-box {
