--- a/main-page.css
+++ b/main-page.css
@@ -391,8 +391,8 @@ body {
 }
 
 #box-1 {
-	margin-left: 100px;
-	margin-right: 150px;
+	margin-left: 10%;
+	margin-right: 25%;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
@@ -471,4 +471,133 @@ body {
 	font-size: 14px;
 }
 
+/*end of section-5*/
 
+
+/*section-6 start*/
+
+#section-6 {
+	width: 100%;
+	height: 100vh;
+	background-image: url(image/bg-section-6.jpg);
+}
+
+#section-6 .section-6-wrapper {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+
+.section-6-wrapper .wrapper-left-6 {
+	width: 40%;
+	position: relative;
+}
+
+.section-6-wrapper .img {
+	width: 300px;
+	left: 10%;
+	position: absolute;
+	top: 15%;
+
+}
+
+.section-6-wrapper .img img {
+	width: 100%;
+	background: radial-gradient(45.43% 53.19% at 50% 50%, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0) 46.15%, #080A0B 99.74%);
+}
+
+.section-6-wrapper .wrapper-for-wrapper {
+	position: relative;
+	width: 50%;
+	padding-right: 10%;
+}
+
+.section-6-wrapper .wrapper-right-6 {
+	flex-direction: column;
+	position: relative;
+}
+
+.section-6-wrapper .wrapper-right-6 .text-1 p{
+	color: white;
+	font-family: Arial, Helvetica, Sans;
+	font-size: 24px;
+	margin-bottom: 0;
+
+}
+
+.section-6-wrapper .wrapper-right-6 .text-2 p {
+	color: white;
+	font-family: Arial, Helvetica, Sans;
+	font-size: 60px;	
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.section-6-wrapper .wrapper-right-6 .text-3 p {
+	color: white;
+	font-family: Open Sans, sans-serif;
+	font-size: 18px;	
+	margin-top: 0;
+}
+
+.wrapper-right-6 .subscribe-container {
+	width: 100%;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.subscribe-container .input {
+	width: 60%;
+}
+
+.subscribe-container .input input {
+	width: 100%;
+	border: 1px solid #dedede;
+	border-radius: 6px;
+	outline: none;
+	padding: 15px 10px;
+	box-sizing: border-box;
+	background-color: rgba(255, 255, 255, 0.08);
+	color: #FFB548;
+	font-weight: bold;
+	font-family: Open Sans, sans-serif;
+}
+
+.subscribe-container .input input:focus {
+	border-color: #FFB548;
+	box-shadow: 0 0 5px #FFB548;
+	color: white;
+}
+
+.subscribe-container .subscribe-button {
+	width: 40%;
+	display: flex;
+	justify-content: center;
+	right: 0;
+
+}
+
+.subscribe-container .subscribe-button a {
+	text-decoration: none;
+	padding: 15px 30px;
+	background-color: #FFB548;
+	border-radius: 6px; 
+	font-weight: bold;
+	font-family: Open Sans, sans-serif;
+	color: black;
+	font-size: 16px;
+}
+
+
+
+
+
+footer {
+	width: 100%;
+	height: 20vh;
+	background-image: url(image/bg-section-6.jpg);
+}
