--- a/responsive.css
+++ b/responsive.css
@@ -37,12 +37,19 @@
 	}
 
 	.section-2-bot .img {
+		display: flex;
+		justify-content: center;
 		padding-left: 0;
+		padding-right: 0;
 	}
 
 
 	#section-3 {
 		height: auto;
+	}
+
+	#section-3 .section-3-wrapper {
+		padding: 40px 0;
 	}
 
 
